complete CustomerDelegate model

--- a/C195/lib/Login_en_US.properties
+++ b/C195/lib/Login_en_US.properties
@@ -10,5 +10,6 @@ Login_Prompt=Enter Username & Password
 Username_Field=Username
 Password_Field=Password
 Access_Button=Access Database
+Exit=Exit
 Invalid_Login_Title=Login Error
 Invalid_Login_Message=Invalid login credentials
