--- a/C195/lib/Login_es_MX.properties
+++ b/C195/lib/Login_es_MX.properties
@@ -10,5 +10,6 @@ Login_Prompt=Ingrese nombre de usuario y contrase\u00f1a
 Username_Field=Nombre de usuario
 Password_Field=Contrase\u00f1a
 Access_Button=Acceso a la base de datos
+Exit=salida
 Invalid_Login_Title=Error de inicio de sesi\u00f3n
 Invalid_Login_Message=Credenciales de acceso invalidos
